--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="skill-row">
         <img class="webdevelopment" src="webdevelopmentimage.png" alt="Web Development">
         <h3>Web Development</h3>
-        <p>I'm currently taking a web development course at Udemy and look foward to learning more about web design!
+        <p>I'm currently taking a web development course at Udemy and looking foward to learning more about web design!
           By the time I'm finished with this course, I will become a full-stack web developer</p>
 
       </div>
